# rendering-in-haskell

./: HOWTO-enable-profiling.txt  LICENSE  README.md  rendering-in-haskell.cabal
src/experiment00/: Color.hs  Main.hs
src/experiment01/: Core.hs  Main.hs  Render.hs  Scene.hs  Surface.hs
src/experiment02/: Color.hs  Core.hs  Light.hs  Main.hs  Material.hs  Render.hs  Scene.hs  Surface.hs
src/experiment03/: Core.hs  Light.hs  Main.hs  Material.hs  Render.hs  Scene.hs
src/experiment04/: Light.hs  Main.hs  Render.hs  Scene.hs
src/experiment05/: Core.hs  Main.hs  Material.hs  Render.hs  Scene.hs
src/experiment06/: Color.hs  Core.hs  Light.hs  Main.hs  Material.hs  PhotonMap.hs  Render.hs  Rnd.hs  Scene.hs  Surface.hs
src/experiment07/: Color.hs  Main.hs  Material.hs  PhotonMap.hs  Render.hs  Scene.hs  Surface.hs
src/experiment08/: Core.hs  Main.hs  Material.hs  PhotonMap.hs  Render.hs  Rnd.hs  Scene.hs  Volume.hs
