
name:                rendering-in-haskell
version:             0.1.0.0

homepage:            https://github.com/stu-smith/rendering-in-haskell
license:             MIT
license-file:        LICENSE
author:              Stu Smith
maintainer:          stusmith1977@gmail.com
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable experiment00
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , bmp -any
                     , bytestring -any
                     , directory -any
  hs-source-dirs:      src/experiment00
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -funbox-strict-fields -fwarn-tabs -threaded -with-rtsopts=-N
  default-extensions:  BangPatterns

executable experiment01
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , bmp -any
                     , bytestring -any
                     , directory -any
  hs-source-dirs:      src/experiment01
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -funbox-strict-fields -fwarn-tabs -threaded -with-rtsopts=-N
  default-extensions:  BangPatterns

executable experiment02
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , bmp -any
                     , bytestring -any
                     , directory -any
  hs-source-dirs:      src/experiment02
  default-language:    Haskell2010
  ghc-options:         -O2 -Wall -funbox-strict-fields -fwarn-tabs -threaded -with-rtsopts=-N
  default-extensions:  BangPatterns
